// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Component should render with given state from Redux store with atleast one selectedIngredient 1`] = `
<div>
  <div
    class="container"
  >
    <div>
      <div
        class="input-container"
      >
        <label
          for="date"
        >
          Meal Date:  
        </label>
        <input
          id="date"
          type="date"
          value="2020-07-14"
        />
      </div>
      <div
        class="select-container"
      >
        <div
          class="rw-multiselect rw-widget"
          tabindex="-1"
        >
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions removals text"
            class="rw-sr"
            id="rw_2_notify_area"
            role="status"
          />
          <div
            class="rw-widget-input rw-widget-picker rw-widget-container"
          >
            <div>
              <input
                aria-busy="false"
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-owns="rw_2_listbox rw_2_notify_area "
                aria-readonly="false"
                autocomplete="off"
                class="rw-input-reset"
                placeholder=""
                role="listbox"
                size="2"
                tabindex="0"
                value=""
              />
            </div>
            <span
              class="rw-select"
            >
              <button
                aria-disabled="false"
                aria-hidden="true"
                class="rw-btn rw-btn-select"
                role="presentational"
                tabindex="-1"
                type="button"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="card-container"
      >
        <div>
          There are no recipes to display
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Main Component should render with given state from Redux store with no selectedIngredients 1`] = `
<div>
  <div
    class="container"
  >
    <div>
      <div
        class="input-container"
      >
        <label
          for="date"
        >
          Meal Date:  
        </label>
        <input
          id="date"
          type="date"
          value="2020-07-14"
        />
      </div>
      <div
        class="select-container"
      >
        <div
          class="rw-multiselect rw-widget"
          tabindex="-1"
        >
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="additions removals text"
            class="rw-sr"
            id="rw_1_notify_area"
            role="status"
          />
          <div
            class="rw-widget-input rw-widget-picker rw-widget-container"
          >
            <div>
              <input
                aria-busy="false"
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-owns="rw_1_listbox rw_1_notify_area "
                aria-readonly="false"
                autocomplete="off"
                class="rw-input-reset"
                placeholder=""
                role="listbox"
                size="2"
                tabindex="0"
                value=""
              />
            </div>
            <span
              class="rw-select"
            >
              <button
                aria-disabled="false"
                aria-hidden="true"
                class="rw-btn rw-btn-select"
                role="presentational"
                tabindex="-1"
                type="button"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="card-container"
      >
        <div>
          There are no recipes to display
        </div>
      </div>
    </div>
  </div>
</div>
`;
